--- a/assgn8/microsite.html
+++ b/assgn8/microsite.html
@@ -355,7 +355,7 @@
 		      <p> Physical Prototype</p></a>
 		    </div>
 		    <div class="col-sm-4">
-		      <a href="EMRredesign.html" style="color: black;"><img src="./images/index/EMScover.png" class="img-responsive" style="width:100%;" alt="Image">
+		      <a href="EMRredesign.html" style="color: black;"><img src="./images/index/reportcover.png" class="img-responsive" style="width:100%;" alt="Image">
 		      <h4><b>EMR Redesign</b></h4></a>
 		    </div>
 		   </div>
